--- a/app/src/main/res/layout/time_picker_widget.xml
+++ b/app/src/main/res/layout/time_picker_widget.xml
@@ -12,7 +12,8 @@
         android:layoutDirection="ltr"
         android:orientation="horizontal">
 
-        <!-- hour -->
+<!--
+        &lt;!&ndash; hour &ndash;&gt;
         <NumberPicker
             android:id="@+id/hour"
             android:layout_width="70dip"
@@ -21,6 +22,7 @@
             android:focusableInTouchMode="true"
             android:visibility="visible"
             />
+-->
 
         <!-- minute -->
         <NumberPicker
